@@ -2,17 +2,16 @@ package com.java.fashionshop.controller;
 
 import com.java.fashionshop.bean.PromotionBean;
 import com.java.fashionshop.dto.PromotionDTO;
-import com.java.fashionshop.entity.PromotionsEntity;
 import com.java.fashionshop.services.PromotionService;
 
 import jakarta.validation.Valid;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/admin/promotions")
@@ -20,45 +19,43 @@ import java.util.List;
 public class ManagePromotionController {
 
     @Autowired
-    private PromotionService service;
+    private PromotionService promotionService;
 
     @GetMapping
-    public ResponseEntity<List<PromotionDTO>> getAll() {
-        return ResponseEntity.ok(service.findAllDto());
+    public ResponseEntity<List<PromotionDTO>> getAllPromotions() {
+        return ResponseEntity.ok(promotionService.findAllDto());
     }
 
-
     @GetMapping("/{id}")
-    public ResponseEntity<?> getById(@PathVariable Integer id) {
-        PromotionDTO dto = service.findById(id);
-        return dto != null ? ResponseEntity.ok(dto) : ResponseEntity.notFound().build();
+    public ResponseEntity<?> getPromotionById(@PathVariable Integer id) {
+        PromotionDTO dto = promotionService.findById(id);
+        return dto != null ? ResponseEntity.ok(dto) : ResponseEntity.badRequest().body("Không tìm thấy khuyến mãi.");
     }
 
     @PostMapping
-    public ResponseEntity<?> create(@Valid @RequestBody PromotionBean bean, BindingResult result) {
-        // Kiểm tra lỗi validation từ @Valid
+    public ResponseEntity<?> createPromotion(@Valid @RequestBody PromotionBean bean, BindingResult result) {
         if (result.hasErrors()) {
             List<String> errors = result.getFieldErrors().stream()
-                .map(error -> error.getDefaultMessage())
-                .toList(); // hoặc .collect(Collectors.toList()) nếu bạn dùng Java < 16
+                .map(e -> e.getDefaultMessage())
+                .collect(Collectors.toList());
             return ResponseEntity.badRequest().body(errors);
         }
 
-        // Kiểm tra logic ngày tháng
         if (bean.getStartDate().isAfter(bean.getEndDate())) {
             return ResponseEntity.badRequest().body("Ngày bắt đầu phải trước ngày kết thúc.");
         }
 
-        return ResponseEntity.ok(service.save(bean));
+        return ResponseEntity.ok(promotionService.save(bean));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<?> update(@PathVariable Integer id,
-                                    @Valid @RequestBody PromotionBean bean,
-                                    BindingResult result) {
+    public ResponseEntity<?> updatePromotion(@PathVariable Integer id,
+                                             @Valid @RequestBody PromotionBean bean,
+                                             BindingResult result) {
         if (result.hasErrors()) {
             List<String> errors = result.getFieldErrors().stream()
-                    .map(e -> e.getDefaultMessage()).toList();
+                    .map(e -> e.getDefaultMessage())
+                    .collect(Collectors.toList());
             return ResponseEntity.badRequest().body(errors);
         }
 
@@ -66,18 +63,15 @@ public class ManagePromotionController {
             return ResponseEntity.badRequest().body("Ngày bắt đầu phải trước ngày kết thúc.");
         }
 
-        PromotionDTO updated = service.update(id, bean);
-        if (updated == null) {
-            return ResponseEntity.badRequest().body("Không tìm thấy khuyến mãi cần cập nhật.");
-        }
-
-        return ResponseEntity.ok(updated);
+        PromotionDTO updated = promotionService.update(id, bean);
+        return updated != null
+                ? ResponseEntity.ok(updated)
+                : ResponseEntity.badRequest().body("Không tìm thấy khuyến mãi để cập nhật.");
     }
 
-
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> delete(@PathVariable Integer id) {
-        service.delete(id);
-        return ResponseEntity.ok("Đã xóa khuyến mãi");
+    public ResponseEntity<?> deletePromotion(@PathVariable Integer id) {
+        promotionService.delete(id);
+        return ResponseEntity.ok("Đã xóa khuyến mãi.");
     }
 }
